--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "version": "0.1.0",
   "author": "Kyle Mathews <mathews.kyle@gmail.com>",
   "dependencies": {
+    "bootstrap": "^4.6.0",
     "firebase": "^8.3.2",
     "gatsby": "^3.1.2",
     "gatsby-plugin-firebase": "^0.2.0-beta.4",
